# data-eng-screen

./: .env.example  README.md  README_part1.md  README_part2.md  pyproject.toml  requirements.txt
dags/: flight_data.py
dbt/models/: stg_flight_data.sql
dbt_models/: sources.yml  stg_flight_data.sql
src/: gcs.py  get_flight_data.py  snowflake.py
utils/: gcs.py  get_flight_data.py  snowflake.py
